netlify layout issue

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -5,4 +5,5 @@
   margin-left: 50px;
   height: 100px;
   width: 100%;
+  object-fit: cover;
 }
